fix: css slide related visibility

--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 .outer-container {
-  width: 100%;
-
+  width: 600px;
+  height: 200px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-self: center;
+  justify-self: center;
   flex-direction: column;
 }
 
@@ -18,30 +18,35 @@
 
 .image-carousel {
   border: 1px solid black;
-  /* width: 90vw; */
-  width: 600px;
-  height: 200px;
-  display: flex;
+  /* width: 600px;
+  height: 200px; */
 
-  /* scroll-snap-type: y mandatory; */
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  /* overflow-x: scroll; */
+  scroll-snap-type: x mandatory;
 }
 
-.imageContainer {
+.slide {
+  /* overscroll-behavior: contain; */
+
   display: flex;
   flex: 1 0 auto;
   justify-content: center;
   height: 100%;
   width: 100%;
   border: 1px solid red;
-
-  /* overscroll-behavior-x: contain; */
 }
+
 /* image carousing */
-.visible {
+
+/* .active {
   visibility: visible;
 }
 
-.hidden {
+.inactive {
   visibility: hidden;
-}
+} */
+
 /* Button listener styles */
